Defect 9 - Fixes