@@ -90,7 +90,6 @@ public class ConstantPool {
      *      stored.
      */
 
-    //[FIXME: Avoid instantiating Integer objects. Call Integer.valueOf() instead.]
     public int addEntry(ConstantPoolEntry entry) {
         int index = entries.size();
 
@@ -106,7 +105,7 @@ public class ConstantPool {
         if (entry instanceof Utf8CPInfo) {
             Utf8CPInfo utf8Info = (Utf8CPInfo) entry;
 
-            utf8Indexes.put(utf8Info.getValue(), new Integer(index));
+            utf8Indexes.put(utf8Info.getValue(), Integer.valueOf(index));
         }
 
         return index;
